Try to fix selectimg on mobile

--- a/src/app/items/components/item/item.component.scss
+++ b/src/app/items/components/item/item.component.scss
@@ -7,12 +7,12 @@ $item-border-radius: 10px;
 	flex: 1 1 25%;
 	padding: 5px;
 	box-sizing: border-box;
-	transition: 0.15s;
+	transition: 0.5s;
 	&:hover {
-		margin-top: -3px;
+		// margin-top: -3px;
 		cursor: pointer;
 		.item {
-			box-shadow: 0px 1px 9px -5px rgba(0, 0, 0, 0.5);
+			box-shadow: 0px 3px 12px -5px rgba(0, 0, 0, 0.5);
 		}
 	}
 	.item {
